--- a/pgdas/front.yml
+++ b/pgdas/front.yml
@@ -29,11 +29,10 @@
   defaultFeedback: >
       
   shuffleOptions: true
-  options:
+  answers:
   - value: 0
     isCorrect: true
 
-      
 - typeName: multipleChoice
   prompt: >
       Dot stereograms are a pair of pictures like these: If you stare at these for some time
@@ -81,28 +80,27 @@
 - typeName: multipleChoice
   prompt: |-
     Consider the following contingency table:
+    
     |           | Tailor | Carpentar | Weaver | Mason |
-    |-----------+--------+-----------+--------+-------|
+    |-----------|--------|-----------|--------|-------|
     | Married   |    452 |      3453 |    324 |   387 |
     | Unmarried |    254 |       542 |    231 |    32 |
     | Divorced  |     23 |        65 |     34 |    79 |
+
     Compute the value of the $$\chi^2$$-test statistic for testing independence.
     Also compute the degrees of freedom for its null distribution.
       
   shuffleOptions: true
   options:
-  - answer: 
+  - answer: $$\chi^2 = 710.83$$, df$$=6$$
     isCorrect: true
-    feedback: >
       
-  - answer:
-    feedback: >
+  - answer: $$\chi^2 = 710.83$$, df$$=11$$
       
-  - answer:
-    feedback: >
+  - answer: $$\chi^2 = 701.38$$, df$$=6$$
+
       
-  - answer:
-    feedback: >
+  - answer: $$\chi^2 = 701.38$$, df$$=11$$
       
 - typeName: checkbox
   prompt: >
@@ -128,15 +126,16 @@
       
       
 - typeName: checkbox
-  prompt: >
+  prompt: |-
       Consider the following (incomplete) 2-way ANOVA table (without interaction):
+      
       | Source  | d.f. |    SS | MS | F  | p-value |
-      |---------+------+-------+----+----+---------|
+      |---------|------|-------|----|----|---------|
       | Village |    4 | 345.2 |    | F1 |         |
       | Method  |    1 | 293.3 |    | F2 |         |
       | Error   |   23 |  67.7 |    |    |         |
-      |---------+------+-------+----+----+---------|
       | Total   |      |       |    |    |         |
+
       What degrees of freedom are used to compute p-value for F1 and F2?
   defaultFeedback: >
       
@@ -200,4 +199,24 @@
       
   - answer: the estimated intercept will not change.
     feedback: >
+      
+- typeName: multipleChoice
+  prompt: >
+      A forgetful statistician claims to have estimated the y-on-x
+      regression line as well as the x-on-y regression line from the same
+      bivariate data, and have recorded both in the same format as:
+      $$y = 1+2x$$ and $$y = 1+3x$$. He cannot recall which is which. Please help
+      him by choosing the correct option:
+      
+  shuffleOptions: true
+  options:
+  - answer: The first one is for y-on-x, the second on is for x-on-y. 
+    isCorrect: true
+      
+  - answer: The first one is for x-on-y, the second on is for y-on-x. 
+      
+  - answer: One cannot say for certain which is for which  based on the available information. 
+      
+  - answer: It is impossible to have these equations estimated from the same data.
+
       
